tests/snapshots/walker__walker_add_input@root_alt_flake_true.snap
---
source: tests/walker.rs
expression: result.to_string()
info:
  flake_nix: ""
  changes:
    - Add:
        id: vmsh
        uri: "github:mic92/vmsh"
        flake: true
---
{
  description = "Manage your flake inputs comfortably.";

  inputs = {
    nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";

    flake-utelinos.url = "github:numtide/flake-utils";

    rust-overlay = {
      url = "github:oxalica/rust-overlay";
      inputs = {
        nixpkgs.follows = "nixpkgs";
        flake-utils.follows = "flake-utils";
      };
    };
    crane = {
      url = "github:ipetkov/crane";
      inputs = {
        nixpkgs.follows = "nixpkgs";
        rust-overlay.follows = "rust-overlay";
        flake-utils.follows = "flake-utils";
      };
    };
    vmsh.url = "github:mic92/vmsh";
  };

  outputs = _: { };
}
