tests/snapshots/walker__walker_list_inputs@deeply_nested_inputs.snap
---
source: tests/walker.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  disko:
    id: disko
    url: "github:nix-community/disko"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:nixos/nixpkgs/nixos-unstable"
    flake: true
follows:
  - parent: disko
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
