tests/snapshots/walker__walker_list_inputs@flat_nested_flat.snap
---
source: tests/walker.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  flake-utils:
    id: flake-utils
    url: "github:numtide/flake-utils/master"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:NixOS/nixpkgs/nixos-unstable"
    flake: true
  poetry2nix:
    id: poetry2nix
    url: "github:nix-community/poetry2nix/master"
    flake: true
follows:
  - parent: poetry2nix
    nested: flake-utils
    target: flake-utils
    kind: indirect
  - parent: poetry2nix
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
