tests/snapshots/walker__walker_list_inputs@toplevel_nesting.snap
---
source: tests/walker.rs
expression: "ListOutput::from(flake_edit.list())"
info:
  flake_nix: ""
  changes: []
---
inputs:
  crane:
    id: crane
    url: "github:ipetkov/crane"
    flake: true
  nixpkgs:
    id: nixpkgs
    url: "github:nixos/nixpkgs/nixos-unstable"
    flake: true
  rust-overlay:
    id: rust-overlay
    url: "github:oxalica/rust-overlay"
    flake: true
follows:
  - parent: crane
    nested: flake-utils
    target: flake-utils
    kind: indirect
  - parent: crane
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
  - parent: crane
    nested: rust-overlay
    target: rust-overlay
    kind: indirect
  - parent: rust-overlay
    nested: flake-utils
    target: flake-utils
    kind: indirect
  - parent: rust-overlay
    nested: nixpkgs
    target: nixpkgs
    kind: indirect
